Fix homepage text size on small viewport

--- a/docs/themes/v2/source/css/styles.css
+++ b/docs/themes/v2/source/css/styles.css
@@ -574,8 +574,10 @@ main {
   margin-bottom: 1em;
 }
 
-.home-page-title-grid div {
-  max-width: 85%;
+@media (min-width: 1280px) {
+  .home-page-title-grid div {
+    max-width: 85%;
+  }
 }
 
 /****************************
